add pack name for custom_name and item_model